image fixed search page on small screen accordion changes

--- a/app/assets/stylesheets/frontend/frontend.scss
+++ b/app/assets/stylesheets/frontend/frontend.scss
@@ -26,6 +26,7 @@ body{
 	@include media("<=1100px") {
     	display: block;
 	}
+
 }
 section.logo-nav{
 	padding-top: 20px;
@@ -222,36 +223,45 @@ section.banner{
 
 }/*banner*/
 
-.accordion-area{
+.res_btn {
+    background-color: $red;
+    border: none;
+    margin: 0 auto;
+    display: block;
+    border-radius: 3px;
+    padding: 8px;
+    font-size: 13px;
+    margin-bottom: 0;
+    display: none;
 
-	border-bottom: 1px solid#ccc;
-	padding-bottom: 13px;
-
-	.selectpicker{
-		height: 34px;
-		width: 100%;
-		max-width: 250px;
-		margin-bottom: 17px;
-
-		@include media("<=991px") {
-			margin: 15px auto;
-			display: block; 
-		}    
-		
-	}//selectpicker
-	.res_btn {
-	    background-color: $red;
-	    border: none;
-	    margin: 0 auto;
-	    display: block;
-	    border-radius: 3px;
-	    padding: 8px;
-	    font-size: 13px;
-	    margin-bottom: 40px;
-	    &:hover{
-	    	background-color: $red-hover;
-	    }
+    @include media("<=1100px") {
+    	display: block;
 	}
+
+    &:hover{
+    	background-color: $red-hover;
+    }
+}
+
+.modal-area{
+	.selectpicker{
+	    height: 34px;
+	    margin: 0 auto;
+	    margin-bottom: 17px;
+
+	    @include media("<=1100px") {
+	    	
+	    	width: 100%;
+		}
+	}
+	.modal-content {
+		padding-top: 15px;
+	}
+	.modal-dialog {
+	    width: 100%;
+	    margin: 0;
+	}
+
 }
 section.dropdown_area{
 
@@ -413,6 +423,13 @@ section.dropdown_area{
 
 		&:hover{
 			background-color: $red-hover;
+		}
+	}
+	.thumbnail_image{
+		height: 197px;
+
+		@include media("<=991px") {
+			height: auto;
 		}
 	}
 }/*thumbnail_area*/
@@ -582,6 +599,9 @@ section.footer{
 }
 .carousel-caption{
 	line-height: 0.4;
+	line-height: 0.4;
+    background-color: rgba(113, 112, 112, 0.5);
+    border-radius: 11px;
 }
 .form-container {
 	width: 100%;
@@ -785,9 +805,7 @@ section.why-mitsab{
 	    background-position: center center;
 	}
 	.detail {
-		padding-top: 30px;
-	    padding-left: 50px;
-    	padding-right: 64px;
+		padding: 15px 64px 15px 50px;
 		@include media("<=1199px") {
 			padding-top: 0;
 		    padding-left: 15px;
